[package]
name = "foursquare-cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["cargo"] }
icalendar = "0.15.8"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
